syntax = "proto3";
package gppn.v1;

import "gppn/v1/payment_message.proto";

// A single entry in the Distributed Routing Table (DRT).
message RouteEntry {
  string next_hop_peer_id = 1;          // libp2p PeerId of next hop
  string destination_did = 2;           // DID of the destination node
  repeated Currency supported_currencies = 3;
  map<string, uint64> available_liquidity = 4;  // currency_code -> atomic units
  double fee_rate = 5;                  // Fee rate as fraction (e.g., 0.001 = 0.1%)
  uint32 avg_latency_ms = 6;
  double trust_score = 7;              // 0.0 - 1.0
  uint64 last_updated = 8;            // Unix millis
  uint32 ttl = 9;                     // Seconds until this entry expires
  uint32 hop_count = 10;
}

// Route Request — broadcast via gossipsub to discover paths.
message RouteRequest {
  bytes request_id = 1;               // UUID v7
  string source_did = 2;
  string destination_did = 3;
  Amount amount = 4;
  uint32 max_hops = 5;
  uint64 timestamp = 6;
  uint32 ttl = 7;                     // Max seconds to wait for responses
  repeated string visited_peers = 8;  // Peers already visited (loop prevention)
}

// Route Response — returned along the reverse path.
message RouteResponse {
  bytes request_id = 1;               // Matches the RouteRequest
  repeated RouteEntry path = 2;       // Ordered list of hops
  Amount estimated_fee = 3;
  uint32 estimated_latency_ms = 4;
  double route_score = 5;
}

// Route Advertisement — periodically broadcast to update DRT entries.
message RouteAdvertisement {
  string advertiser_did = 1;
  string advertiser_peer_id = 2;
  repeated Currency supported_currencies = 3;
  map<string, uint64> available_liquidity = 4;
  double fee_rate = 5;
  double trust_score = 6;
  uint64 timestamp = 7;
  uint32 ttl = 8;
  bytes signature = 9;               // Ed25519 signature for authenticity
}

// Scoring weights for route evaluation — configurable per node.
message ScoringWeights {
  double alpha = 1;  // Cost weight
  double beta = 2;   // Latency weight
  double gamma = 3;  // Trust weight
  double delta = 4;  // Liquidity weight
}
